<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/security_pref_header">

        <SwitchPreferenceCompat
            app:key="use_biometrics"
            app:title="@string/use_biometrics"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="payment_confirmation"
            app:title="@string/payment_confirmation"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="payment_confirmation_with_biometrics"
            app:title="@string/payment_confirmation_with_biometrics"
            app:defaultValue="true"
            app:summary="@string/payment_confirmation_with_biometrics_summary"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="authorized_devices_button"
            app:title="@string/authorized_devices"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="login_history_button"
            app:title="@string/login_history"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/privacy_pref_header">

        <SwitchPreferenceCompat
            app:key="collect_data"
            app:title="@string/collect_data"
            app:defaultValue="false"
            app:summary="@string/collect_data_summary"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="request_data_button"
            app:title="@string/request_data"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="privacy_policy_button"
            app:title="@string/privacy_policy"/>

    </PreferenceCategory>

</PreferenceScreen>