<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notification_pref_header">

        <SwitchPreferenceCompat
            app:key="receive_money"
            app:title="@string/receive_notification_title"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="payment_request"
            app:title="@string/payment_request_notification_title"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="send_notification"
            app:title="@string/send_notification_title"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="ads_notification"
            app:title="@string/ads_notification_title"
            app:summary="@string/ads_notification_summary"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_pref_security_header">

        <SwitchPreferenceCompat
            app:key="security_notification"
            app:title="@string/security_notification_title"
            app:summaryOff="@string/security_notification_summary_off"
            app:summaryOn="@string/security_notification_summary_on"
            app:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>