<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/about_perf_header">

        <com.example.example.settings.extra.ButtonPreference
            app:key="payment_policy_button"
            app:title="@string/payment_policy"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="privacy_policy_button"
            app:title="@string/privacy_policy"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="final_user_agreement_button"
            app:title="@string/final_user_agreement"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="legal_agreement_button"
            app:title="@string/legal_agreement"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="thanks_to_button"
            app:title="@string/thanks_to"/>

    </PreferenceCategory>

</PreferenceScreen>