<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/about_perf_header">

        <com.example.example.settings.extra.ButtonPreference
            app:key="help_center_button"
            app:title="@string/help_center"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="faq_button"
            app:title="@string/faq"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="bug_report_button"
            app:title="@string/bug_report"/>

        <com.example.example.settings.extra.ButtonPreference
            app:key="chat_with_us_button"
            app:title="@string/chat_with_us"/>

    </PreferenceCategory>

</PreferenceScreen>