<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_receive"
            android:icon="@drawable/ic_menu_receive"
            android:title="@string/menu_receive" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_payment_method"
            android:icon="@drawable/ic_menu_payment_method"
            android:title="@string/menu_payment_methods" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/_ignore_menu">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"
            android:menuCategory="secondary" />
    </group>

</menu>